--- a/about-us.html
+++ b/about-us.html
@@ -263,7 +263,7 @@ Nyack, NY
     
   <div style="clear:both;height:5px;"></div>
     <div id="cta" class="gray-cta">
-        <div class="site-width"><p class="whitetxt">Call <strong>(914) 715-5603</strong>  today for a free estimate or fill out our<a href="/estimate/" class="redbutton">ESTIMATE  REQUEST  FORM</a> </p></div>
+        <div class="site-width"><p class="whitetxt">Call <strong>(914) 715-5603</strong>  today for a free estimate <a href="/contact-us.html" class="redbutton">Contact Us</a> </p></div>
     </div>
     <div style="clear:both;"></div>
 
