--- a/index.html
+++ b/index.html
@@ -290,12 +290,6 @@ Carmel, NY</p>
 </div>
    
     <div id="cta" class="gray-cta">
-        <div class="site-width"><p class="whitetxt">Call <strong>(914) 715-5603</strong>  today for a free estimate or fill out our<a href="/estimate/" class="redbutton">ESTIMATE  REQUEST  FORM</a> </p></div>
+        <div class="site-width"><p class="whitetxt">Call <strong>(914) 715-5603</strong>  today for a free estimate <a href="/contact-us.html" class="redbutton">Contact Us</a> </p></div>
     </div>
     <div style="clear:both;"></div>
-
-
-<div id="main" class="wrapper">
-
-	
-<div style="clear:both;"></div>
