--- a/renovations/extensions.html
+++ b/renovations/extensions.html
@@ -232,7 +232,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
     
   <div style="clear:both;height:5px;"></div>
     <div id="cta" class="gray-cta">
-        <div class="site-width"><p class="whitetxt">Call <strong>(914) 715-5603</strong>  today for a free estimate or fill out our<a href="/estimate/" class="redbutton">ESTIMATE  REQUEST  FORM</a> </p></div>
+        <div class="site-width"><p class="whitetxt">Call <strong>(914) 715-5603</strong>  today for a free estimate <a href="/contact-us.html" class="redbutton">Contact Us</a> </p></div>
     </div>
     <div style="clear:both;"></div>
 
