--- a/contact-us.html
+++ b/contact-us.html
@@ -589,13 +589,8 @@
     </header><!-- #masthead -->
     <div style="clear:both;"></div>
 
-    <div id="main" class="wrapper">
+    <div id="main" class="wrapper" style="max-width:100%;">
 
-
-
-        <div class="site-width">
-            <p class="redTxt"></p>
-        </div>
         <div class="site-width">
 
             <div id="primary" class="site-content">
